# VeriGen-AI

./: Dockerfile  README.md  cli.py  client.py  dashboard.css  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.json
.github/workflows/: codeql.yml  docker-image.yml
agent/: __init__.py  core.py  events.py  token_tracker.py
dashboard/: __init__.py  app.py  config.py  providers.py  theme.py
dashboard/screens/: __init__.py  run.py  setup.py  summary.py
dashboard/widgets/: __init__.py  action_feed.py  action_summary.py  agent_chat.py  error_chart.py  matrix_panel.py  perf_monitor.py  pie_chart.py  score_chart.py  score_panel.py  status_bar.py  system_info.py  task_history.py  task_progress.py  ticker_bar.py  token_panel.py
server/: app.py  environment.py
tasks/: generator.py  task_data.py
test_data/: dirty_sales_report.csv
tests/: test_agent_core.py  test_config.py  test_endpoints.py  test_environment.py  test_events.py  test_generator.py  test_inference.py  test_models.py  test_providers.py  test_token_tracker.py
